--- a/src/main/resources/css/dedicon-default.scss
+++ b/src/main/resources/css/dedicon-default.scss
@@ -134,7 +134,7 @@ pagenum {
 frontmatter, bodymatter, rearmatter {
 	display: block;
 	/* The following line sets the values used for the top-center page position and the TOC. */
-	string-set: print-page-from '', print-page-to '';
+	string-set: print-page-from '', print-page-to '', print-page-toc '';
 }
 frontmatter:not(:has(> *:not(doctitle, docauthor, #generated-title-page))) {
 	display: none;
@@ -258,7 +258,7 @@ p:empty {
 #generated-colophon-page {
 	page-break-inside: avoid;
 	/* The following line sets the values used for the top-center page position and the TOC. */
-	string-set: print-page-from '', print-page-to '';
+	string-set: print-page-from '', print-page-to '', print-page-toc '';
 }
 
 /* --------------------------------------------------------------------------------
